<resources>
    <string name="app_name">ClearSky</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="WindUnit">-Km</string>
    <string name="WindName">Wind</string>
    <string name="HumidityName">Humidity</string>
    <string name="hoursection">Hourly Details</string>
    <string name="daysSection">Next 5 Days</string>
    <string name="CurrentTemp">0</string>
    <string name="HumidityUnit">-%</string>
    <string name="DayName">Monday, Oct 23</string>
    <string name="MaxTemp">Max: 20°C</string>
    <string name="MinTemp">Min: 10°C</string>
    <string name="FeelsLike">Feels like: 15°C</string>
    <string name="enableView">Enable Display Over Other Apps</string>
    <string name="TimeTitle">Start Time:</string>
    <string name="EndTitle">End Time:</string>
    <string name="PickDate">Select Date</string>
    <string name="PickTime">Select Time</string>
    <string name="AlarmSound">Alarm Sound</string>
    <string name="Notification">Notification Only</string>
    <string name="save">Save Notification Setting</string>
    <string name="CityName">City Name</string>
    <string name="temp">20°</string>
    <string name="Language">Language</string>
    <string name="Arabic">Arabic</string>
    <string name="English">English</string>
    <string name="Default">Default</string>
    <string name="TempUnit">Temp Unit</string>
    <string name="Celsius">Celsius °C</string>
    <string name="Kelvin">Kelvin °K</string>
    <string name="Fahrenheit">Fahrenheit °F</string>
    <string name="Location">Location</string>
    <string name="GPS">GPS</string>
    <string name="Map">Map</string>
    <string name="WindSpeedUnit">Wind Speed Unit</string>
    <string name="meter_sec">meter/sec</string>
    <string name="mile_hour">mile/hour</string>
    <string name="feelLike">"Feels Like: "</string>
    <string name="Alert">Alert</string>
    <string name="NotificationOnly">Notification</string>
    <string name="feelslike">"Feels Like: "</string>
    <string name="pressure">"Pressure: "</string>
    <string name="pressureValue">val</string>
    <string name="feelval">val</string>
    <string name="unit_celsius">°C</string>
    <string name="unit_fahrenheit">°F</string>
    <string name="unit_kelvin">K</string>
    <string name="unit_pressure">hPa</string>
    <string name="unit_meter_per_sec">m/s</string>
    <string name="unit_mile_per_hour">m/h</string>
    <string name="statusTxt">s-</string>
    <string name="cityTxt">cityName</string>
    <!-- Days of the Week -->
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>

    <!-- AM/PM -->
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <!-- Temperature Labels -->
    <string name="max_temp">Max: %1$s°C</string>
    <string name="min_temp">Min: %1$s°C</string>
    <string name="feels_like">Feels like: %1$s°C</string>
</resources>