<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/forecast_bg"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/tvDayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DayName"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

<LinearLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="horizontal">

    <TextView
        android:id="@+id/tvMaxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/MaxTemp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvMinTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/MinTemp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvFeelsLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FeelsLike"
        android:textColor="@color/white" />
</LinearLayout>
    </LinearLayout>
